se consume api spoty

--- a/src/app/historia/historia.component.html
+++ b/src/app/historia/historia.component.html
@@ -6,6 +6,9 @@
     <p>El momento de popularidad más alto de la banda llegó con su segundo álbum, "Toxicity". Este incluía <em>Chop Suey!, </em>un single que acabó por convertirse en uno de los temas de más éxito del grupo a pesar de que fue suprimido de las radios durante semanas por la alta carga política de su letra.</p>
     <p>Los componentes de System of a Down son Serj Tankian (voz/teclado/ocasionalmente guitarra), Daron Malakian (guitarra/voz), Shavo Odadjian (bajo) y John Dolmayan (batería).</p>
   </div>
-  <img src="https://firebasestorage.googleapis.com/v0/b/musicos-75fae.appspot.com/o/fotonoticia_20161015090403_420.jpg?alt=media&token=9cfe19da-1a7a-4eee-ad8f-fae7d8f8cc49" alt="">
+  <img src="https://storage.googleapis.com/stateless-elclubdelrock-com/2020/02/39d8ec17-system-of-a-down-2019.jpg" alt="">
+  <div class="textopa">
+    <p>La banda californiana de origen armenio System of a Down fue formada en el año 1994 y alcanzó el reconocimiento mundial con su segundo álbum, Toxicity, que fue publicado en el 2001. Poseedores de un particular e inclasificable estilo, la música del cuarteto de heavy metal ha recibido todo tipo de calificativos. Del nu metal al rock progresivo, con más de 40 millones de discos vendidos en todo el mundo, el grupo ha tenido diversos altibajos en su carrera debido al interés de sus miembros en expandir territorios musicales a través de otros proyectos creativos alternativos. De hecho, su último trabajo de estudio se publicó en el año 2005.</p>
+  </div>
 </div>
 <app-footer></app-footer>
