--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,3 +1,3 @@
-<footer class="bg-light">
+<footer class="bg-dark">
   <p>Copyright © 2022 Sebastian Villegas, todos los derechos reservados.</p>
 </footer>
