--- a/src/app/albumes/albumes.component.html
+++ b/src/app/albumes/albumes.component.html
@@ -1,13 +1,12 @@
 <app-menu></app-menu>
 <div class="cont">
-  <div class="card cont2" *ngFor="let respuesta of respuesta" style="width: 18rem;">
-    <img src={{respuesta.imagenes}} class="card-img-top img2" alt="...">
+  <div class="card cont2" *ngFor="let cancion of canciones" style="width: 18rem;">
+    <img src={{cancion.album.images[0].url}} class="card-img-top img2" alt="...">
     <div class="card-body">
-      <h5 class="card-title">{{respuesta.nombre}}</h5>
-      <p class="card-text">{{respuesta.descripcion}}</p>
-      <h6>Valor Noche</h6>
-      <p class="card-text">{{respuesta.valorNoche}}</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <h5 class="card-title">{{cancion.name}}</h5>
+      <audio src={{cancion.preview_url}} controls></audio>
+      <!-- <p class="card-text">{{cancion.descripcion}}</p> -->
+      <!-- <p class="card-text">{{respuesta.valorNoche}}</p> -->
     </div>
   </div>
 </div>
